<resources>
    <string name="app_name">Reto8</string>
    <string name="sqlite_database">SQLite Database</string>
    <string name="name_field">Name:</string>
    <string name="filter">Filter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_display_contact">DisplayCompany</string>
    <string name="name">Name</string>
    <string name="url">URL</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="products">Products / Services</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="todo">TODO</string>
    <string name="reset">Reset</string>
    <string name="go_back">Cancel</string>
    <string-array name="categories">
        <item></item>
        <item>Consultoria</item>
        <item>Desarrollo a la medida</item>
        <item>Fabrica de software</item>
    </string-array>
</resources>